--- a/frontend/hookstream-ui/package.json
+++ b/frontend/hookstream-ui/package.json
@@ -9,8 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "pinia": "^3.0.2",
-    "vue": "^3.5.13"
+    "sass": "^1.89.0",
+    "vite-plugin-vuetify": "^2.1.1",
+    "vue": "^3.5.13",
+    "vuetify": "^3.8.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
